fix: detect completed sessions in web UI (closes #2)
Emit a final session:completed websocket event when tmux polling detects the session has ended.
Include session liveness metadata in snapshots so late-joining clients render completed state immediately.
Update the session web UI to show a completion banner/status and stop reconnect attempts once completion is known.

--- a/web/session.html
+++ b/web/session.html
@@ -14,6 +14,8 @@
     <span id="task-label"></span>
   </div>
 
+  <div id="session-completed-banner" class="hidden">Session completed — this run is no longer live.</div>
+
   <div id="stage-container">
     <canvas id="pixi-canvas"></canvas>
   </div>
